Updated backend and frontend to use the new database schema.